2010-08-09  Ryosuke Niwa  <rniwa@webkit.org>

Reviewed by Justin Garcia.

        Undo fails in RemoveCSSPropertyCommand when the corresponding style attribute is removed
        https://bugs.webkit.org/show_bug.cgi?id=43639

        The bug was caused when RemoveCSSPropertyCommand is called with CSSMutableStyleDeclaration of some styled element,
        and the style attribute of the element is removed subsequently. When the attribute removal is undone, new instance of
        CSSMutableStyleDeclaration is created and RemoveCSSPropertyCommand's m_style became detached from the element.

        Modified RemoveCSSPropertyCommand to store the styled element directly instead of its CSSMutableStyleDeclaration.

        Test: editing/undo/remove-css-property-and-remove-style.html

        * WebCore.order:
        * editing/ApplyStyleCommand.cpp:
        (WebCore::ApplyStyleCommand::removeCSSStyle): Calls removeCSSProperty.
        (WebCore::ApplyStyleCommand::extractTextDecorationStyle): Calls removeCSSProperty.
        * editing/CompositeEditCommand.cpp:
        (WebCore::CompositeEditCommand::removeCSSProperty): Takes StyledElement instead of CSSMutableStyleDeclaration.
        * editing/CompositeEditCommand.h:
        * editing/RemoveCSSPropertyCommand.cpp:
        (WebCore::RemoveCSSPropertyCommand::RemoveCSSPropertyCommand): Takes StyledElement instead of CSSMutableStyleDeclaration.
        (WebCore::RemoveCSSPropertyCommand::doApply): See above.
        (WebCore::RemoveCSSPropertyCommand::doUnapply): See above.
        * editing/RemoveCSSPropertyCommand.h:
        (WebCore::RemoveCSSPropertyCommand::create): See above.
2010-08-09  Ryosuke Niwa  <rniwa@webkit.org>

        Reviewed by Justin Garcia.

        Undo fails in RemoveCSSPropertyCommand when the corresponding style attribute is removed
        https://bugs.webkit.org/show_bug.cgi?id=43639

        Added a test to remove style attribute after removing a CSS property from the style.
        Undo should restore both style attribute and the removed CSS property.

        * editing/undo/remove-css-property-and-remove-style-expected.txt: Added.
        * editing/undo/remove-css-property-and-remove-style.html: Added.


Canonical link: https://commits.webkit.org/55821@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65014 268f45cc-cd09-0410-ab3c-d52691b4dbfc