WebCore/editing/ApplyStyleCommand.cpp
@@ -1291,9 +1291,9 @@ bool ApplyStyleCommand::removeCSSStyle(CSSMutableStyleDeclaration* style, HTMLEl
             removed = true;
             if (mode == RemoveNone)
                 return true;
-            removeCSSProperty(decl, propertyID);
+            removeCSSProperty(elem, propertyID);
             if (propertyID == CSSPropertyUnicodeBidi && !decl->getPropertyValue(CSSPropertyDirection).isEmpty())
-                removeCSSProperty(decl, CSSPropertyDirection);
+                removeCSSProperty(elem, CSSPropertyDirection);
         }
     }
 
@@ -1353,7 +1353,7 @@ PassRefPtr<CSSMutableStyleDeclaration> ApplyStyleCommand::extractTextDecorationS
 
     RefPtr<CSSValue> property = style->getPropertyCSSValue(CSSPropertyTextDecoration);
     if (property && !equalIgnoringCase(property->cssText(), "none"))
-        removeCSSProperty(style.get(), CSSPropertyTextDecoration);
+        removeCSSProperty(element, CSSPropertyTextDecoration);
 
     return textDecorationStyle.release();
 }
