WebCore/editing/RemoveCSSPropertyCommand.cpp
@@ -31,25 +31,27 @@
 
 namespace WebCore {
 
-RemoveCSSPropertyCommand::RemoveCSSPropertyCommand(Document* document, PassRefPtr<CSSMutableStyleDeclaration> style, CSSPropertyID property)
+RemoveCSSPropertyCommand::RemoveCSSPropertyCommand(Document* document, PassRefPtr<StyledElement> element, CSSPropertyID property)
     : SimpleEditCommand(document)
-    , m_style(style)
+    , m_element(element)
     , m_property(property)
     , m_important(false)
 {
-    ASSERT(m_style);
+    ASSERT(m_element);
 }
 
 void RemoveCSSPropertyCommand::doApply()
 {
-    m_oldValue = m_style->getPropertyValue(m_property);
-    m_important = m_style->getPropertyPriority(m_property);
-    m_style->removeProperty(m_property);
+    CSSMutableStyleDeclaration* style = m_element->inlineStyleDecl();
+    m_oldValue = style->getPropertyValue(m_property);
+    m_important = style->getPropertyPriority(m_property);
+    style->removeProperty(m_property);
 }
 
 void RemoveCSSPropertyCommand::doUnapply()
 {
-    m_style->setProperty(m_property, m_oldValue, m_important);
+    CSSMutableStyleDeclaration* style = m_element->inlineStyleDecl();
+    style->setProperty(m_property, m_oldValue, m_important);
 }
 
 } // namespace WebCore
